--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.4.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
+    "react-use": "^14.2.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "PORT=3006 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
